/*
 * Copyright (C) 2017 Dgraph Labs, Inc. and Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Use protos/gen.sh to generate .pb.go files.
syntax = "proto3";

package protos;

message ManifestChangeSet {
  // A set of changes that are applied atomically.
  repeated ManifestChange changes = 1;
  HeadInfo head = 2;
  repeated ShardChange shardChange = 3;
  ShardSplit split = 4;
}

message HeadInfo {
  uint64 version   = 1;
  uint32 logID     = 2;
  uint32 logOffset = 3;
}

message ManifestChange {
  uint64 ID = 1;            // Table ID.
  enum Operation {
    CREATE = 0;
    DELETE = 1;
    MOVE_DOWN = 2;
  }
  Operation op = 2;
  uint32 level = 3;       // Only used for CREATE.
  int32 CF = 4;
  uint64 shardID = 5;
  bytes smallest = 6;
  bytes biggest = 7;
}

message ShardChange {
  uint64 shardID = 1;
  uint64 shardVer = 2;
  enum Operation {
    CREATE = 0;
    DELETE = 1;
  }
  Operation Op = 3;
  bytes startKey = 4;
  bytes endKey = 5;
  repeated uint64 tableIDs = 6;
}

message ShardSplit {
  uint64 oldID = 1;
  repeated uint64 IDs = 3;
  repeated bytes Keys = 4;
}
