// Use protos/gen.sh to generate .pb.go files.
syntax = "proto3";

package protos;

message MetaChangeEvent {
  bytes startKey = 1;
  bytes endKey = 2;
  repeated L0FileMeta addedL0Files = 3;
  repeated uint64 removedL0Files = 4;
  repeated FileMeta addedFiles = 5;
  repeated FileMeta removedFiles = 6;
}

message L0FileMeta {
  uint64 ID = 1;
  uint64 CommitTS = 2;
  bytes startKey = 3;
  bytes endKey = 4;
}

message FileMeta {
  uint64 ID = 1;
  int32 CF = 2;
  uint32 level = 3;
  bytes smallest = 4;
  bytes biggest = 5;
}
